--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@capacitor/status-bar": "1.0.7",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
+    "vee-validate": "^4.5.8",
     "vue": "^3.2.21",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@capacitor/cli": "3.4.0",
