--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/ios": "3.4.0",
     "@capacitor/keyboard": "1.2.1",
     "@capacitor/status-bar": "1.0.7",
+    "@capacitor/storage": "^1.2.4",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
     "axios": "^0.25.0",
@@ -24,6 +25,7 @@
     "vee-validate": "^4.5.8",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12",
+    "vuex": "^4.0.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
